--- a/index.css
+++ b/index.css
@@ -1,1 +1,38 @@
 /* Styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  margin-bottom: 2rem;
+}
+
+.bookInfo, .remove, hr {
+  margin: 0.3rem 0;
+}
+
+#bookList {
+  display: flex;
+  flex-direction: column;
+}
+
+.bookForm {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  max-width: 20rem;
+  border: 1px solid black;
+  padding: 1rem;
+}
+
+button {
+  width: fit-content;
+}
