--- a/index.css
+++ b/index.css
@@ -15,7 +15,9 @@ h1 {
   margin-bottom: 2rem;
 }
 
-.bookInfo, .remove, hr {
+.bookInfo,
+.remove,
+hr {
   margin: 0.3rem 0;
 }
 
@@ -27,7 +29,7 @@ h1 {
 .bookForm {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
   max-width: 20rem;
   border: 1px solid black;
   padding: 1rem;
