--- a/index.css
+++ b/index.css
@@ -1,40 +1,81 @@
 /* Styles */
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 main {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
 
 h1 {
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
-.bookInfo,
-.remove,
-hr {
-  margin: 0.3rem 0;
-}
-
-#bookList {
-  display: flex;
-  flex-direction: column;
+h2 {
+  margin-top: 2rem;
+  text-align: center;
 }
 
 .bookForm {
-  display: flex;
-  flex-direction: column;
   gap: 0.5rem;
-  max-width: 20rem;
-  border: 1px solid black;
+  margin: auto;
+  width: 20rem;
+  display: flex;
   padding: 1rem;
+  max-width: 100%;
+  flex-direction: column;
+}
+
+hr {
+  width: 83px;
+  margin: auto;
+  border-style: solid;
+  border-width: 0 0 5px;
+  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="8" height="4"><circle fill="black" cx="1" cy="0.5" r="0.5"/></svg>') 0 0 100% repeat;
 }
 
 button {
+  padding: 0 0.5rem;
   width: fit-content;
+  align-self: flex-end;
+  box-shadow: 1px 1px 1px #000;
+}
+
+.container {
+  width: 25rem;
+  max-width: 95%;
+}
+
+#bookList {
+  width: 100%;
+  border: 1px solid #000;
+}
+
+tr {
+  width: 100%;
+  display: flex;
+  padding: 0.2rem 0;
+  justify-content: space-between;
+}
+
+tr:nth-child(even) {
+  background: #fff;
+}
+
+tr:nth-child(odd) {
+  background: #ccc;
+}
+
+td {
+  padding-left: 0.3rem;
+}
+
+.remove {
+  margin-right: 0.5rem;
+  padding: 0 0.5rem 0 0.5rem;
 }
