--- a/index.css
+++ b/index.css
@@ -79,3 +79,42 @@ td {
   margin-right: 0.5rem;
   padding: 0 0.5rem 0 0.5rem;
 }
+
+header {
+  margin: auto;
+  width: 25rem;
+  max-width: 100%;
+}
+
+nav {
+  padding: 0.2rem 0;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  width: 25rem;
+  max-width: 100%;
+  border: 1px solid #000;
+}
+
+nav span {
+  padding-left: 0.2rem;
+}
+
+nav ul {
+  display: flex;
+}
+
+li {
+  list-style: none;
+  padding: 0 0.2rem 0 0.2rem;
+}
+
+li a {
+  text-decoration: none;
+  color: #000;
+}
+
+#fecha {
+  margin-top: 0.3rem;
+  text-align: right;
+}
