--- a/index.css
+++ b/index.css
@@ -3,17 +3,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 main {
   display: flex;
   align-items: center;
   flex-direction: column;
-}
-
-h1 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 h2 {
@@ -46,14 +42,20 @@ button {
   box-shadow: 1px 1px 1px #000;
 }
 
-.container {
+#list {
   width: 25rem;
   max-width: 95%;
+}
+
+#list h1 {
+  text-align: center;
+  margin: 1rem 0 2rem 0;
 }
 
 #bookList {
   width: 100%;
   border: 1px solid #000;
+  border-spacing: 0;
 }
 
 tr {
@@ -104,7 +106,7 @@ nav ul {
   display: flex;
 }
 
-li {
+nav li {
   list-style: none;
   padding: 0 0.2rem 0 0.2rem;
 }
@@ -117,4 +119,26 @@ li a {
 #fecha {
   margin-top: 0.3rem;
   text-align: right;
+}
+
+footer {
+  border: 1px solid #000;
+  margin: 1rem auto 0 auto;
+  padding: 0.3rem;
+  width: 25rem;
+  max-width: 100%;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contact h2 {
+  margin: 1rem;
+}
+
+#contact p {
+  margin: 1rem;
 }
